# pyraksamp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  mkdocs.yml  print_dialogs.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: bot.md  colors.md  constants.md  dialogs.md  events.md  exceptions.md  index.md  shell.md  textdraws.md
docs/concepts/: architecture.md  connection-lifecycle.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: actions.md  connecting.md  dialogs.md  flows.md  multi-file.md  raw-rpc.md  shell.md  textdraws.md
docs/hooks/: gen_api.py
docs/recipes/: auto-register.md  chat-logger.md  command-bot.md  index.md  key-presser.md  multi-bot.md  pin-pad.md  reconnect.md
scripts/: gen_api_docs.py
src/pyraksamp/: __init__.py  _actions.py  _bridge.py  _bus.py  _core.pyi  _dispatcher.py  _listener.py  _main.py  _streams.py  _utils.py  _world.py  colors.py  dialogs.py  events.py  exceptions.py  textdraws.py
src/pyraksamp/shell/: __init__.py  _app.py  _cli.py  _commands.py  _completion.py  _pty.py  _widgets.py
src/pyraksamp_core/: Cargo.toml
src/pyraksamp_core/samp_core/: Cargo.toml
src/pyraksamp_core/samp_core/src/: lib.rs
src/pyraksamp_core/src/: bitstream.rs  client.rs  encrypt.rs  lib.rs  reliability.rs  socks5.rs
src/samp_core/: bindings.cpp  bitstream.h  client.cpp  client.h  encrypt.cpp  encrypt.h  reliability.cpp  reliability.h
src/samp_rust/: Cargo.toml
src/samp_rust/samp_core/: Cargo.toml
src/samp_rust/samp_core/src/: lib.rs
src/samp_rust/src/: bitstream.rs  client.rs  encrypt.rs  lib.rs  reliability.rs
tests/: bindings_test.cpp  conftest.py  test_actions.py  test_bitstream.py  test_bridge.py  test_bus.py  test_dialogs.py  test_encrypt.py  test_exceptions.py  test_facade.py  test_reliability.py  test_shutdown.py  test_streams.py  test_textdraws.py
