[project]
name = "pyraksamp"
version = "0.1.0"
description = "SA:MP 0.3.7 headless client library"
readme = "README.md"
authors = [
    { email = "albert.fz@yandex.ru" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
module-name   = "pyraksamp._core"
manifest-path = "src/pyraksamp_core/samp_core/Cargo.toml"
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "src/pyraksamp_core/Cargo.toml" },
    { file = "src/pyraksamp_core/samp_core/Cargo.toml" },
]
