[project]
name = "pyraksamp"
version = "0.1.0"
description = "SA:MP 0.3.7 headless client library"
readme = "README.md"
authors = [
    { email = "albert.fz@yandex.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
pyraksamp = "pyraksamp._main:main"

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
module-name   = "pyraksamp._core"
manifest-path = "src/pyraksamp_core/samp_core/Cargo.toml"
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "src/pyraksamp_core/Cargo.toml" },
    { file = "src/pyraksamp_core/samp_core/Cargo.toml" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
