[project]
name = "pyraksamp"
version = "0.1.0"
description = "SA:MP 0.3.7 headless client library"
readme = "README.md"
authors = [
    { email = "albert.fz@yandex.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
pyraksamp = "pyraksamp._main:main"

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
module-name   = "pyraksamp._core"
manifest-path = "src/pyraksamp_core/samp_core/Cargo.toml"
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "src/pyraksamp_core/Cargo.toml" },
    { file = "src/pyraksamp_core/samp_core/Cargo.toml" },
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.34",
    "pre-commit>=4.5",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
    "SIM",
]
ignore = [
    "E501",
    "E402",
    "E731",
    "EM102",
    "W191",
    "E111",
    "E114",
    "E117",
    "COM812",
    "COM819",
    "ISC002",
    "B011",
]
